--- a/netuno/estilos/style.css
+++ b/netuno/estilos/style.css
@@ -132,7 +132,8 @@ div.container {
     width: 295px;
     border-radius: 10px;
     margin: auto;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    box-shadow: 1px 8px 14px 1px rgba(0, 0, 0, 0.295);
     display: flex;
 }
 
@@ -156,24 +157,32 @@ div.containerp {
 
 div#containerblack {
     background-color: black;
-    width: 440px;
-    padding: 10px;
+    width: 400px;
     border-radius: 10px;
     margin: auto;
+    margin-top: 2em;
+    box-shadow: 0px 8px 16px 1px rgba(0, 0, 0, 0.377);
     display: flex;
 }
 
 div#containerblackp {
     color: white;
-    padding: 0px 3px;
+    padding: 15px 2px 15px 11px;
+    font-size: .9em;
 }
 
 div#containerblackimg {
-    padding: 5px 0px 0px 0px;
+    padding: 19px 0px 0px 0px;
 }
 
 aside strong {
     color: var(--cor1);
+}
+
+#imgvector1 {
+    margin: auto;
+    padding: 10px 0px 60px 0px;
+    display: block;
 }
 
 section {
