--- a/netuno/estilos/media-query.css
+++ b/netuno/estilos/media-query.css
@@ -29,10 +29,7 @@
         margin-left: 95px;
     }
 
-    #banner1 {
-        position: absolute;
-        wi
-    }
+    banner1
 
     #banner2 {
         width: 500px;
