--- a/netuno/estilos/style.css
+++ b/netuno/estilos/style.css
@@ -16,6 +16,10 @@
     box-sizing: border-box;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 header {
     background-color: var(--cor1);
 }
@@ -139,7 +143,7 @@ div.container {
     width: 295px;
     border-radius: 10px;
     margin: auto;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     box-shadow: 1px 8px 14px 1px rgba(0, 0, 0, 0.295);
     display: flex;
 }
