--- a/netuno/estilos/style.css
+++ b/netuno/estilos/style.css
@@ -62,6 +62,158 @@ nav > #nav-preto > #preto {
     width: 100%;
 }
 
+header {
+    position: relative;
+}
+
+/* FORMULARIO */
+
+section#login {
+    position: absolute;
+    top: 40%;
+    left: 73%;
+
+    background-color: white;
+    width: 400px;
+    height: 700px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.466);
+
+    transform: translate(-50%, -72%);
+}
+
+form > div.cadastro > h1 {
+    color: rgb(116, 116, 116);
+    font-size: 1.3em;
+    margin-left: 26px;
+}
+
+form > div.cadastro {
+    display: block;
+    width: 100%;
+}
+
+div.cadastro > input {
+    width: 300px;
+    padding: 10px 0px 10px 50px;
+    margin-bottom: 8px;
+    border-radius: 5px;
+    border: 1px solid rgb(116, 116, 116);;
+
+    transform: translateX(25px)
+}
+
+div.cadastro > input#enviar {
+
+}
+
+div.cadastro > select {
+    position: relative;
+    color: var(--cor1);
+    width: 300px;
+    padding: 10px 0px 10px 50px;
+    margin-bottom: 30px;
+    border-radius: 5px;
+
+    transform: translateX(25px)
+}
+
+div.cadastro > label {
+    display: none;
+}
+
+div.cadastro > img.ico {
+    width: 21px;
+    transform: translate(24px, 5px);
+}
+
+form > div.cadastro > input {
+    width: ;
+}
+
+div.conhecimento {
+    background-color: var(--cor1);
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    height: 200px;
+}
+
+div.conhecimento > div.checkbox {
+    padding: 0px 15px;
+    color: white;
+}
+
+div.conhecimento > h2 {
+    color: white;
+    font-size: 1em;
+    margin-left: 5px;
+}
+
+div.cadastro > h2 {
+    color: var(--cor1);
+    font-size: 1em;
+    margin-left: 30px;
+}
+
+div.cadastro > div#radio {
+    padding: 0px 5px;
+}
+
+div.cadastro > p#pazul {
+    color: var(--cor1);
+    text-align: center;
+    font-size: 0.8em;
+}
+
+div.cadastro > div#border {
+    border-bottom: 1px solid rgb(116, 116, 116);
+    margin-top: 20px;
+}
+
+div#radio {
+    margin-left: 36px;
+}
+
+div.cadastro > div#enviar > input[type="submit"] {
+    background-color: var(--cor1);
+    color: white;
+    display: block;
+    font-size: 1em;
+    width: 300px;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transform: translateX(50px)
+}
+
+div.cadastro > div#enviar > input[type="submit"]:hover {
+    background-color: #1e97e2;
+}
+
+div.cadastro > p {
+    color: rgb(116, 116, 116);
+    font-size: 0.8em;
+    text-align: center;
+}
+
+div.cadastro > p > strong {
+    color: var(--cor1);
+}
+
+
+
+
+
+
+
+
+
+
+
+/* FORMULARIO */
 #banner2 {
     width: 355px;
 }
